# FinCost-ToolKit

./: .env.example  .gitignore  README.md  calculator.py  config.json  config_llm.json  demo.py  exp-1-analysis.py  exp3-analysis.py  main.py  pyproject.toml  requirements.txt  test.py  visualization.py
data/: experiment_records_claude-sonnet-4-5_10000.0_2025-12-01-10-00-00_2025-12-31-15-00-00.jsonl  experiment_records_gpt-4o-mini_10000.0_2025-12-02_2025-12-04.jsonl  experiment_records_gpt-4o-mini_10000.0_2026-01-06-14-00-00_2026-01-07-14-00-00.jsonl  merged.jsonl  static-claude-sonnet-4-5-10000-2025-12-01-10-00-00-2025-12-31-15-00-00.jsonl  static_gpt-4o-mini_10000.jsonl
data/exp-1/: experiment_records_claude-sonnet-4-5_10000.0_2025-12-01_2026-01-30.jsonl  experiment_records_glm-4.7_10000.0_2025-12-01_2026-01-30.jsonl  static-DeepSeek-V3-10000.0-daily-2025-12-01_2026-01-30.jsonl  static-glm-4.7-10000.0-daily-2025-12-01_2026-01-30.jsonl  static-qwn3-max-2026-01-23_10000.0-daily-2025-12-01_2026-01-30.jsonl
data/exp-2/: experiment_records_gpt-5.2_100000.0_2025-12-01_2026-01-30.jsonl  experiment_records_gpt-5.2_1000000_2025-12-01_2026-01-30.jsonl  (+6 more)
fincost/: __init__.py  agent.py  analysis.py  backtest.py  commission.py  config.py  data.py  diagnosis_render.py  indicators.py  io.py  llm.py  main.py  plots.py  records.py  render.py  report.py  tools.py
script/: calculator.py  exp3-analysis.py  exp3_daily_comparison.csv  exp4-analysis.py
supplementary-materials/: README.md
tools/: daily-hourly-compare-output.jsonl  daily-hourly-compare.py
(+43 files in other folders)
