[project]
name = "fincost"
version = "0.1.0"
description = "FinCost demo backtest runner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0.0",
  "datasets>=2.14.0",
  "langchain>=0.1.0",
  "langchain-core>=0.1.0",
  "langchain-openai>=0.0.5",
  "langchain-community>=0.0.20",
  "python-dotenv>=1.0.0",
  "matplotlib>=3.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
